privacy to false

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-fridge",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://HKC0T.github.io/my-fridge",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
